@@ -1,5 +1,9 @@
 Changes with Apache 1.3b4
 
+  *) Defining GPROF will disable profiling in the parent and enable it
+     in the children.  If you're profiling under Linux this is pretty much
+     necessary because SIGPROF is lost across a fork(). [Dean Gaudet]
+
   *) htdigest and htpasswd needed slight tweaks to work on OS/2 and WIN32.
      [Brian Havard]
 
